force-app/main/default/objects/Work_Order__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Work orders are due with in 1 week from their Requested Date.</description>
    <formula>Requested_Date__c + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>