force-app/main/default/objects/Work_Order__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <description>Estimated number of hours required to complete a work order.</description>
    <inlineHelpText>Limited at 3 digits because if you have a work order that exceeds that (i.e. &lt;= 1,000), something is severely wrong.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>