force-app/main/default/objects/Work_Order__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Overall order this work order is a part of.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>