force-app/main/default/objects/Work_Order__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <description>Date when this work order has been requested for.</description>
    <label>Requested Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>