force-app/main/default/objects/Work_Order__c/validationRules/Service_Technician_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Technician_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Assigned_Technician__r.Service_Technician__c)</errorConditionFormula>
    <errorMessage>Sorry, only service technicians can be selected!</errorMessage>
</ValidationRule>